Bug 357378 - Missing licence, author and version information in About Kalgebra dialog
Summary: Missing licence, author and version information in About Kalgebra dialog
Status: RESOLVED FIXED
Alias: None
Product: kalgebra
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-12-31 23:06 UTC by André Marcelo Alvarenga
Modified: 2016-01-02 15:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (17.06 KB, image/png)
2015-12-31 23:06 UTC, André Marcelo Alvarenga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description André Marcelo Alvarenga 2015-12-31 23:06:15 UTC
See screenshot.

Reproducible: Always




KDE Applications 15.12
Comment 1 André Marcelo Alvarenga 2015-12-31 23:06:58 UTC
Created attachment 96393 [details]
Screenshot
Comment 2 Aleix Pol 2016-01-02 15:06:29 UTC
Git commit 35ff0b68dee287ed318a8f1aa4a4e9c6267fcad3 by Aleix Pol.
Committed on 02/01/2016 at 15:05.
Pushed by apol into branch 'master'.

Properly initialize KAboutData and the cli arguments for KAlgebra

M  +14   -7    src/main.cpp

http://commits.kde.org/kalgebra/35ff0b68dee287ed318a8f1aa4a4e9c6267fcad3