Properly initialize KAboutData and the cli arguments for KAlgebra

BUG: 357378